Fixed add/remove button appearing above menu on mobile.

--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ input[type=search]:focus {
     text-transform: uppercase;
     border-radius: 0 3px 3px 0;
     text-shadow: 0 -1px 0 rgba(0, 0 ,0, .3);
+    z-index: 9;
 }
 .add button{
     background: #00A388;
@@ -977,6 +978,7 @@ nav#nav-mobile ul {
     padding-left: 0;
     text-align: center;
     background-color: white;
+    z-index: 9999;
 }
 
 nav#nav-mobile li {
